styles/index.css
/* ... */
time::after{
  content: attr(datetime);
  margin-inline-start: 0.1682ch;
}
time[datetime]::before {
  content: '🗓';
}
time[datetime]::after {
  padding: 0.1682ch;
  margin-inline-start: 1ch;
  box-shadow: 0 0 0.1ch 0.1682ch;
}
time:empty {
  background: yellow;
}
time:empty::before {
}
p time { vertical-align: middle }

data, var {
  color: CanvasText;
  padding: 0.1618em;
  font-weight: bold;
  background: ButtonFace;
  margin-inline: 0.1618em;
}
data {}
var{}

pre, code, kbd, samp
  { border-radius: 0.618em }
pre code {
  display: inherit;
  border-radius: unset;
  border: solid currentColor;
  border-width: 0 0 0 0.02em;
}


/* http://html5doctor.com/the-details-and-summary-elements */
details { }
summary {
  opacity: 0.75;
  list-style: none;
}
summary::before,
summary::after {
  content: 'foo';
  background: orange;
}

summary::-webkit-details-marker
  { display: none } /* https://stackoverflow.com/a/66814239 */
details:hover > summary, details:focus-within > summary
  { opacity: 1.0 }
main details > summary::before
  { content: '>' }
main details[open] > summary::before
  { content: 'v' }


/* NAV */
nav {
  background: pink;
  margin: 0;
  /* padding: 0; */
}
nav > details > ul {
  margin: unset;
  width: inherit;
  display: list-item;
  position: relative;
}

nav > details > ul li li {
  list-style: '➱' inside;
}

nav > details > ul li li:hover {
  list-style-type: '➯';
}

nav details > summary {
  cursor: s-resize;
  list-style: '📁' inside;
}
nav details[open] > summary {
  cursor: n-resize;
  list-style: '📂';
}
nav > details > summary {
  right: 2ch;
  bottom: 2ch;
  width: 100%;
  width: 38%;
  opacity: 100%;
  position: fixed;
  display: block;
  display: list-item;
  position: absolute;
  background: canvas;
  /* box-shadow: var(--shadow); */
  text-align: var(--text-align);
  /* clip-path: inset(0px 244px 1px 170px); */
   /* https://htmlsymbols.xyz/unicode/U+2630 */
  clip-path: none;
}
nav > details > summary {
}
nav > details > summary::before,
nav > details > summary::after {
  content: '☰';
  left: -1ch;
  padding: 1ch;
  z-index: -1;
  background: inherit;
  display: inline-block;
  vertical-align: text-top;
  box-shadow: var(--shadow);
  font-size: calc(1em * var(--GOLDEN-RATIO));
  border: calc(0.1ch * var(--GOLDEN-RATIO)) solid;
}
nav > details > summary::before
  { position: relative }
nav > details > summary::after {
  /* list-style-type: unset; */
  /* position: fixed; */
  /* bottom: 1ch; */
  /* right: 1ch; */
}
nav > details[open] > summary {
  list-style-position: inside;
  list-style-type: 'ⓧ';
}
nav > details[open] > summary::before,
nav > details[open] > summary::after {
  content: 'ⓧ';
}
nav > details[open] > summary:hover::before,
nav > details[open] > summary:hover::after {
  /* https://htmlsymbols.xyz/unicode/U+2716 */
  content: '✖';
}
body > nav *::before, body > nav *::after {
  outline: 1ch solid lightgrey;
  outline-offset: 1ch;
  outline: 0;
  border: 1ch solid magenta;
  border-width: 1ch 0;
  text-align: center;
  display: inherit;
}
body > nav *::before {
  content: '⇇';
  cursor: grabbing;
  list-style-type: 'foo';
  background: yellow;
}
body > nav *::after {
  content: '⇉';
  cursor: grabbing;
  background: blue;
  list-style-type: 'bar';
  outline: 0;
  border-width: 1ch 0;
}
body > nav > details::after {
  z-index: -1;
  border: none;
  outline: none;
  position: fixed;
  bottom: 0;
  left: 0ch;
  width: 0;
  height: 0;
  background: rgba(0,0,0,0.2);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter */
  backdrop-filter: blur(calc(1ch * var(--GOLDEN-RATIO)));
  color: Canvas;
  text-align: center;
  font-size: calc(100vh / var(--GOLDEN-RATIO));
  line-height: 0;
  opacity: 80%;
}
body > nav > details[open]::after {
  width: 100vw;
  height: 100vh;
  line-height: 100vh;
}

body > nav li li :link:focus-visible {
  background-color: Mark;
}
body > nav li li :link::before {
  content: '📄';
  display: inline-block;
  line-height: var(--line-height);
}
body > nav li li :link:hover::before {
  content: '📝';
}

address { }
li address
  { display: inline-block }


/* Table styling
  - https://adrianroselli.com/2018/02/tables-css-display-properties-and-aria.html
  - counter styling & fallback
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/forced-colors
    - https://stackoverflow.com/questions/17067294/html-table-with-100-width-with-vertical-scroll-inside-tbody/17380697#17380697
*/
table {
  /* table-layout: fixed; */
  border-radius: 1ch;
  border-collapse: collapse;
  box-shadow: var(--box-shadow);
  counter-reset: table rows th tr td;
  background: rgba(255,255,255,0.5);
}
table::before, table::after {
  display: block;
  text-indent: 1ch;
  margin-inline: 1ch;
  background: inherit;
}
table::before {
  content: '▦table';
  margin-block-start: 1ch;
  border-radius: 1ch 1ch 0 0;
}
table::after {
  content: '▦table';
  margin-block-end: 1ch;
  border-radius: 0 0 1ch 1ch;
}

table > * { margin-inline: 1ch }
table *::before, table *::after { outline: 1px dashed }

table tr, table tr > * {}
table tr
  { display: flex }
table tr > * {
  flex-grow: 1;
  flex-basis: 0;
  text-align: inherit;
  display: inline-flex;
  justify-content: space-between;
}
table tr::before, table tr::after,
table tr > *::before, table tr > *::after {
  content: 'tr';
  min-width: 2ch;
  font-size: smaller;
  text-align: center;
  white-space: nowrap;
  writing-mode: vertical-lr;
}

table th {
  /* top: auto; */
  /* position: sticky; */
  background: inherit;
}
table th:empty
  { border: none }
table th::before, table th::after {}
table th::before { content: 'th' }
table th::after  { content: 'th' }

table td {
  -webkit-user-select: text;
          user-select: text;
}
table td:empty { border: none }
table td::before, table td::after {}
table td::before { content: '>' }
table td::after  { content: '<' }

table > thead, table > tfoot, table > tbody {}
/* ... */

